1.KubenetesBasics/10 - NetworkPolicies/10.2-pod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-us-east
  namespace: network-policies
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          region: us-east
    ports:
    - protocol: TCP
      port: 8888
  egress:
  - to: []
